fix align text

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -197,7 +197,6 @@ a {
 .column-right{
   float: right;
   width: 50%;
-  text-align: right;
 }
 
   img {
